# qtoggleserver

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements-opt.txt  setup.py  tox.ini  update-qui.sh
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  improvement_proposal.md
.github/workflows/: code-quality.yml  main.yml  release.yml  workflow.yml
docker/: Dockerfile  docker-entrypoint.sh  pip  profile_pip.sh
extra/: qtoggleserver.conf.sample
frontend/: .eslintrc.json  package-lock.json  package.json
frontend/html/: index.html  qui.html
frontend/js/: api.js  auth.js  cache.js  events.js  index.js  notifications.js  qtoggle-stock.js  sections.js  utils.js
frontend/js/common/: attrdef-form-mixin.js  backup-restore.js  common.js  new-version-message-form.js  provisioning-form.js  reboot-device-mixin.js  update-firmware-form.js  wait-device-mixin.js
frontend/js/dashboard/: add-panel-group-form.js  dashboard-section.js  dashboard.js  group.js  panel-group-composite.js  panel.js
frontend/js/devices/: add-device-form.js  device-form.js  devices-list.js  devices-section.js  devices.js
frontend/js/login/: login-form.js  login-section.js  login.js
frontend/js/ports/: add-port-form.js  devices-list.js  port-form.js  ports-list.js  ports-section.js  ports.js
frontend/js/settings/: client-settings.js  (+3 more)
qtoggleserver/: __init__.py  persist.py  settings.py  startup.py  version.py
qtoggleserver/commands/: __init__.py  server.py  shell.py
qtoggleserver/conf/: metadata.py  settings.py  utils.py
qtoggleserver/core/: events.py  expressions.py  history.py  main.py  ports.py  responses.py  reverse.py  sequences.py  sessions.py  typing.py  vports.py  webhooks.py
qtoggleserver/eventhandlers/: __init__.py  base.py
qtoggleserver/events/: slave.py
qtoggleserver/frontend/: .eslintrc.json  eslint.config.mjs  events.py  package-lock.json  package.json  webpack.config.js
qtoggleserver/lib/: __init__.py  ble.py  filtereventhandler.py  onewire.py  peripheral.py  polled.py  templatenotifications.py
qtoggleserver/peripherals/: __init__.py  events.py  exceptions.py  peripheral.py  peripheralport.py  threadedrunner.py
qtoggleserver/persist/: __init__.py  base.py  typing.py
qtoggleserver/slaves/: __init__.py  devices.py  events.py  exceptions.py  ports.py  utils.py
qtoggleserver/system/: __init__.py  battery.py  conf.py  date.py  dhcp.py  dns.py  fwupdate.py  net.py  storage.py  temperature.py
qtoggleserver/utils/: __init__.py  asyncio.py  cache.py  cmd.py  conf.py  configurable.py  date.py  debounced.py  debouncer.py  driver_params.py  dynload.py  expressions.py  http.py  json.py  logging.py  main.py  misc.py  parallel_caller.py  process.py  runner.py  template.py  timedset.py  timer.py
qtoggleserver/web/: __init__.py  base.py  constants.py  handlers.py  j2template.py  quicontext.py  server.py
tests/: conftest.py
tests/integration/: test_eval_triggers.py
tests/qtoggleserver/: conftest.py
(+363 files in other folders)
